Fixed icon vertical alignment

--- a/FrontEnd/src/components/criteriaRender.module.scss
+++ b/FrontEnd/src/components/criteriaRender.module.scss
@@ -4,21 +4,37 @@
   align-content: center;
   flex-direction: column;
   justify-content: center;
-
+  ul {
+    margin: 0px;
+    padding: 0px;
+  }
   li {
     background-color: white;
     list-style-type: none;
     display: flex;
+    padding: 6px;
+
+    .contain {
+      display: flex;
+      width: 80%;
+    }
     .icon {
       width: 39px;
       height: auto;
+      display: flex;
+      align-items: center;
+      height: 100%;
+
       svg {
         width: 39px;
+        display: block;
+        margin: 0 auto;
       }
     }
     .criteria {
       padding: 5px;
       font-size: 24px;
+      flex-grow: 2;
     }
   }
 
@@ -27,5 +43,6 @@
     font-size: 36px;
     font-weight: 600;
     text-align: center;
+    padding-bottom: 20px;
   }
 }
