--- a/FrontEnd/src/components/exampleRender.module.scss
+++ b/FrontEnd/src/components/exampleRender.module.scss
@@ -11,7 +11,7 @@
     padding: 5px;
     font-size: 24px;
     img {
-      width: 40px;
+      width: 30px;
     }
   }
 
